@@ -1,3 +1,22 @@
+/*
+ * Licensed to Elasticsearch B.V. under one or more contributor
+ * license agreements. See the NOTICE file distributed with
+ * this work for additional information regarding copyright
+ * ownership. Elasticsearch B.V. licenses this file to you under
+ * the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *	http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+
 import org.yaml.snakeyaml.Yaml
 
 // fetch version from Logstash's master versions.yml file
@@ -19,7 +38,7 @@ buildscript {
   }
   dependencies {
     classpath 'org.yaml:snakeyaml:1.17'
-    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+    classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
   }
 }
 
@@ -32,19 +51,17 @@ jar {
 }
 
 ext {
-  jmh = 1.18
+  jmh = 1.22
 }
 
 dependencies {
-  compile project(':logstash-core')
-  compile "org.openjdk.jmh:jmh-core:$jmh"
-  compile "org.openjdk.jmh:jmh-generator-annprocess:$jmh"
-  compile "org.openjdk.jmh:jmh-core-benchmarks:$jmh"
-  compile 'net.sf.jopt-simple:jopt-simple:5.0.3'
-  compile 'com.google.guava:guava:21.0'
-  compile 'commons-io:commons-io:2.5'
-  runtime 'joda-time:joda-time:2.8.2'
-  compile "org.jruby:jruby-core:$jrubyVersion"
+  implementation project(':logstash-core')
+  implementation "org.openjdk.jmh:jmh-core:$jmh"
+  annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:$jmh"
+  implementation 'com.google.guava:guava:24.1.1-jre'
+  implementation 'commons-io:commons-io:2.5'
+  runtimeOnly 'joda-time:joda-time:2.8.2'
+  api "org.jruby:jruby-core:$jrubyVersion"
 }
 
 javadoc {
@@ -54,22 +71,25 @@ javadoc {
 apply plugin: 'com.github.johnrengelman.shadow'
 
 shadowJar {
-  baseName = 'logstash-core-benchmarks-all'
-  classifier = null
-  version = null
+  archiveBaseName = 'logstash-core-benchmarks-all'
+  archiveClassifier = null
+  archiveVersion = ''
 }
 
 task jmh(type: JavaExec, dependsOn: [':logstash-core-benchmarks:clean', ':logstash-core-benchmarks:shadowJar']) {
 
   main = "-jar"
 
+  def include = project.properties.get('include', '')
+
   doFirst {
     args = [
-      "-Djava.io.tmpdir=${buildDir.absolutePath}",
-      "-XX:+UseParNewGC", "-XX:+UseConcMarkSweepGC", "-XX:CMSInitiatingOccupancyFraction=75",
-      "-XX:+UseCMSInitiatingOccupancyOnly", "-XX:+DisableExplicitGC",
-      "-XX:+HeapDumpOnOutOfMemoryError", "-Xms2g", "-Xmx2g",
-      shadowJar.archivePath,
+            "-Djava.io.tmpdir=${buildDir.absolutePath}",
+            "-XX:+UseConcMarkSweepGC", "-XX:CMSInitiatingOccupancyFraction=75",
+            "-XX:+UseCMSInitiatingOccupancyOnly", "-XX:+DisableExplicitGC",
+            "-XX:+HeapDumpOnOutOfMemoryError", "-Xms2g", "-Xmx2g",
+            shadowJar.archivePath,
+            include
     ]
   }
 }
